<resources>
    <string name="app_name">Ewan\'s Calculator</string>
    <string name="allClear">AC</string>
    <string name="delete">\u232b</string>
    <string name="division">÷</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">×</string>
    <string name="equals">=</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal">.</string>
    <string name="negate">(+/-)</string>
    <string name="NaN">NaN</string>
    <string name="lengthMessage">Can\'t enter more than 15 digits</string>
    <string name="rangeMessage">Calculation outside of acceptable range</string>
</resources>